# retris-mb

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  dev_diary.md
.cargo/: config.toml
src/: main.rs
src/mylib/: accel.rs  beep.rs  buttons.rs  font.rs  game.rs  logo.rs  mod.rs  pendolino.rs  pixeldisplay.rs  rand.rs  screen.rs  tetrominos.rs
