[package]
name = "retris-mb"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7"
embedded-hal = "0.2.7"
libm = "0.2.7"
lsm303agr = "0.2.0"
microbit-v2 = "0.13.0"
nanorand = { version = "0.7.0", default-features = false, features = ["pcg64"] }
rtt-target = "0.4"

[dependencies.panic-rtt-target]
version = "0.1"
features = ["cortex-m"]

# This works around old versions in the `microbit-v2`
# crate. You don't have to use this crate, just linking
# against it is sufficient.
[dependencies.cortex-m]
version = "0.7"
features = ["inline-asm", "critical-section-single-core"]

# Features to enable on the micro:bit v2 control scheme
[features]
default = ["logo", "buttons", "accelerometer", "demo"]
demo = []
buttons = []
logo = []
accelerometer = []
